setting site up

--- a/vi.html
+++ b/vi.html
@@ -35,72 +35,35 @@
                 <li><a href="#footer" class="scrolly">Contact Us</a></li>
             </ul>
         </nav>
-		
+
         <!-- Main -->
         <article id="main">
             <header>
-                <h2 class="major special">Generic Page</h2>
-                <p>Aliquam ut ex ut interdum donec imperdiet</p>
+                <h2 class="major special">Vi Peel Medical Grade Chemical Peel</h2>
+                <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
+                <h3><a
+                    href="tel:4017678766"
+                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+                    ><span class="label">(401) 767-8766</span></a
+                ></h3>
             </header>
             <section class="wrapper">
                 <div class="inner">
-                    <h3>Lorem ipsum dolor</h3>
+                    <h3 style="text-align: center;">VI Peel Treatment</h3>
                     <span class="image left"
-                        ><img src="images/pic04.jpg" alt=""
+                        ><img src="images/chemical.png" alt=""
                     /></span>
                     <p>
-                        Morbi mattis mi consectetur tortor elementum, varius
-                        pellentesque velit convallis. Aenean tincidunt lectus
-                        auctor mauris maximus, ac scelerisque ipsum tempor. Duis
-                        vulputate ex et ex tincidunt, quis lacinia velit
-                        aliquet. Duis non efficitur nisi, id malesuada justo.
-                        Maecenas sagittis felis ac sagittis semper. Curabitur
-                        purus leo, tempus sed finibus eget, fringilla quis
-                        risus. Maecenas et lorem quis sem varius sagittis et a
-                        est. Maecenas iaculis iaculis sem. Donec vel dolor at
-                        arcu tincidunt bibendum. Interdum et malesuada fames ac
-                        ante ipsum primis in faucibus. Fusce ut aliquet justo.
-                        Donec id neque ipsum. Integer eget ultricies odio. Nam
-                        vel ex a orci fringilla tincidunt. Aliquam eleifend
-                        ligula non velit accumsan cursus. Etiam ut gravida
-                        sapien.
+                        A VI peel from Dr. Linda Young, DNP improves the tone, texture, and clarity of the skin.  Reduce and eliminate your age spots, acne scars and, treat hyperpigmentation with our skin treatments. This chemical peel not just softens fine lines and wrinkles but also stimulates collagen production for firmer and more youthful skin.
+                    </br>
+                    
                     </p>
-                    <p>
-                        Vestibulum ultrices risus velit, sit amet blandit massa
-                        auctor sit amet. Sed eu lectus sem. Phasellus in odio at
-                        ipsum porttitor mollis id vel diam. Praesent sit amet
-                        posuere risus, eu faucibus lectus. Vivamus ex ligula,
-                        tempus pulvinar ipsum in, auctor porta quam. Proin nec
-                        dui cursus, posuere dui eget interdum. Fusce lectus
-                        magna, sagittis at facilisis vitae, pellentesque at
-                        etiam. Quisque posuere leo quis sem commodo, vel
-                        scelerisque nisi scelerisque. Suspendisse id quam vel
-                        tortor tincidunt suscipit. Nullam auctor orci eu dolor
-                        consectetur, interdum ullamcorper ante tincidunt. Mauris
-                        felis nec felis elementum varius.
-                    </p>
-                    <hr />
-                    <h4>Feugiat aliquam</h4>
-                    <p>
-                        Nam sapien ante, varius in pulvinar vitae, rhoncus id
-                        massa. Donec varius ex in mauris ornare, eget euismod
-                        urna egestas. Etiam lacinia tempor ipsum, sodales
-                        porttitor justo. Aliquam dolor quam, semper in tortor
-                        eu, volutpat efficitur quam. Fusce nec fermentum nisl.
-                        Aenean erat diam, tempus aliquet erat.
-                    </p>
-                    <p>
-                        Etiam iaculis nulla ipsum, et pharetra libero rhoncus
-                        ut. Phasellus rutrum cursus velit, eget condimentum nunc
-                        blandit vel. In at pulvinar lectus. Morbi diam ante,
-                        vulputate et imperdiet eget, fermentum non dolor. Ut
-                        eleifend sagittis tincidunt. Sed viverra commodo mi, ac
-                        rhoncus justo. Duis neque ligula, elementum ut enim vel,
-                        posuere finibus justo. Vivamus facilisis maximus nibh
-                        quis pulvinar. Quisque hendrerit in ipsum id tellus
-                        facilisis fermentum. Proin mauris dui, at vestibulum sit
-                        amet, auctor bibendum neque.
-                    </p>
+                    <a href="tel:4017678766"
+                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+                     class="button primary large aestheticButtons" id="vi"
+                            >Find Out More</a
+                        >
+                    
                 </div>
             </section>
         </article>
@@ -114,7 +77,7 @@
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday - Sunday</br>
 						Extended hours are available by appointment only.</p>
                     <ul class="actions">
-                        <li><a href="contact.html" class="button">Learn more</a></li>
+                        <li><a href="#main" class="button scrolly">Learn more</a></li>
                     </ul>
                 </section>
                 <section class="contact-info">
@@ -143,7 +106,7 @@
                     </ul>
                     <ul class="contact">
                         <li class="icon solid fa-home">
-                            <a href="#"
+                            <a href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749"
                                 >Dr. Linda Young, DNP<br />117 Eddie Dowling
                                 Hwy<br />North Smithfield, RI 02896</a
                             >
