--- a/adult.html
+++ b/adult.html
@@ -35,71 +35,62 @@
                 <li><a href="#footer" class="scrolly">Contact Us</a></li>
             </ul>
         </nav>
-		
+
         <!-- Main -->
         <article id="main">
             <header>
-                <h2 class="major special">Generic Page</h2>
-                <p>Aliquam ut ex ut interdum donec imperdiet</p>
+                <h2 class="major special">Adult Primary Care</h2>
+                <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
+                <h3><a
+                                href="tel:4017678766"
+                                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+                                ><span class="label">(401) 767-8766</span></a
+                            ></h3>
             </header>
             <section class="wrapper">
                 <div class="inner">
-                    <h3>Lorem ipsum dolor</h3>
+                    <h3 style="text-align: center;">Comprehensive Primary Care for Adults</h3>
                     <span class="image left"
-                        ><img src="images/pic04.jpg" alt=""
-                    /></span>
+                        ><img src="images/newPatient.png" alt=""
+                    />
+                    <ul class="actions special stacked" style="padding-top: 25px; text-align: center;">
+                        <li>
+                            <a href="#" class="button primary large scrolly pdfButtons"
+                                >New Patient Registration</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#" class="button large scrolly pdfButton"
+                                >Welcome Letter</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#" class="button primary large scrolly pdfButtons"
+                                >PCMH FAQ</a
+                            >
+                        </li>
+                    </ul></span>
                     <p>
-                        Morbi mattis mi consectetur tortor elementum, varius
-                        pellentesque velit convallis. Aenean tincidunt lectus
-                        auctor mauris maximus, ac scelerisque ipsum tempor. Duis
-                        vulputate ex et ex tincidunt, quis lacinia velit
-                        aliquet. Duis non efficitur nisi, id malesuada justo.
-                        Maecenas sagittis felis ac sagittis semper. Curabitur
-                        purus leo, tempus sed finibus eget, fringilla quis
-                        risus. Maecenas et lorem quis sem varius sagittis et a
-                        est. Maecenas iaculis iaculis sem. Donec vel dolor at
-                        arcu tincidunt bibendum. Interdum et malesuada fames ac
-                        ante ipsum primis in faucibus. Fusce ut aliquet justo.
-                        Donec id neque ipsum. Integer eget ultricies odio. Nam
-                        vel ex a orci fringilla tincidunt. Aliquam eleifend
-                        ligula non velit accumsan cursus. Etiam ut gravida
-                        sapien.
+                        Dr. Young, DNP treats adult patients of all ages with compassion, kindness and respect. The office has been serving the North Smithfield, RI since 2019 and Dr. Young, DNP has been treating adult and geriatric patients for over 17 years. Call or visit our facility to learn more about our adult and geriatric primary care.
                     </p>
                     <p>
-                        Vestibulum ultrices risus velit, sit amet blandit massa
-                        auctor sit amet. Sed eu lectus sem. Phasellus in odio at
-                        ipsum porttitor mollis id vel diam. Praesent sit amet
-                        posuere risus, eu faucibus lectus. Vivamus ex ligula,
-                        tempus pulvinar ipsum in, auctor porta quam. Proin nec
-                        dui cursus, posuere dui eget interdum. Fusce lectus
-                        magna, sagittis at facilisis vitae, pellentesque at
-                        etiam. Quisque posuere leo quis sem commodo, vel
-                        scelerisque nisi scelerisque. Suspendisse id quam vel
-                        tortor tincidunt suscipit. Nullam auctor orci eu dolor
-                        consectetur, interdum ullamcorper ante tincidunt. Mauris
-                        felis nec felis elementum varius.
+                        
                     </p>
                     <hr />
-                    <h4>Feugiat aliquam</h4>
+                    <h4>We Take Care of Your Medical Concerns</h4>
                     <p>
-                        Nam sapien ante, varius in pulvinar vitae, rhoncus id
-                        massa. Donec varius ex in mauris ornare, eget euismod
-                        urna egestas. Etiam lacinia tempor ipsum, sodales
-                        porttitor justo. Aliquam dolor quam, semper in tortor
-                        eu, volutpat efficitur quam. Fusce nec fermentum nisl.
-                        Aenean erat diam, tempus aliquet erat.
-                    </p>
-                    <p>
-                        Etiam iaculis nulla ipsum, et pharetra libero rhoncus
-                        ut. Phasellus rutrum cursus velit, eget condimentum nunc
-                        blandit vel. In at pulvinar lectus. Morbi diam ante,
-                        vulputate et imperdiet eget, fermentum non dolor. Ut
-                        eleifend sagittis tincidunt. Sed viverra commodo mi, ac
-                        rhoncus justo. Duis neque ligula, elementum ut enim vel,
-                        posuere finibus justo. Vivamus facilisis maximus nibh
-                        quis pulvinar. Quisque hendrerit in ipsum id tellus
-                        facilisis fermentum. Proin mauris dui, at vestibulum sit
-                        amet, auctor bibendum neque.
+                        <b>-</b> Annual exams  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Hepatitis A and B vaccines</br>
+                        <b>-</b> GYN exams &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Pneumonia vaccines</br>
+                        <b>-</b> DOT exams &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Nebulizer treatment</br>
+                        <b>-</b> Sick visits &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Worker's compensation evaluations</br>
+                        <b>-</b> UTI testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Trigger point injections</br>
+                        <b>-</b> Pregnancy testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Skin tag removal </br>
+                        <b>-</b> Cholesterol testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> PFT's </br>
+                        <b>-</b> A1C testing </br>
+                        <b>-</b> Flu testing </br>
+                        <b>-</b> Strep throat</br>
+                        <b>-</b> Flu vaccines</br>
+                        <b>-</b> TDAP vaccines
                     </p>
                 </div>
             </section>
@@ -114,7 +105,7 @@
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday - Sunday</br>
 						Extended hours are available by appointment only.</p>
                     <ul class="actions">
-                        <li><a href="contact.html" class="button">Learn more</a></li>
+                        <li><a href="#main" class="button scrolly">Learn more</a></li>
                     </ul>
                 </section>
                 <section class="contact-info">
@@ -143,7 +134,7 @@
                     </ul>
                     <ul class="contact">
                         <li class="icon solid fa-home">
-                            <a href="#"
+                            <a href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749"
                                 >Dr. Linda Young, DNP<br />117 Eddie Dowling
                                 Hwy<br />North Smithfield, RI 02896</a
                             >
