--- a/team.html
+++ b/team.html
@@ -1,148 +1,150 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, user-scalable=1"
-        />
-        <link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
-    </head>
-    <body class="is-preload">
-        <!-- Floating Reviews Badge -->
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
 
-        <!-- Header -->
-        <header id="header">
-            <h1>
-                <a href="index.html">Dr. Linda S. Young, DNP</a>
-            </h1>
-            <a href="#menu">Menu</a>
+<head>
+    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
+</head>
+
+<body class="is-preload">
+    <!-- Floating Reviews Badge -->
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
+
+    <!-- Header -->
+    <header id="header">
+        <h1>
+            <a href="index.html">Dr. Linda S. Young, DNP</a>
+        </h1>
+        <a href="#menu">Menu</a>
+    </header>
+
+    <!-- Menu -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="adult.html">Adult Primary Care</a></li>
+            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <li><a href="aesthetic.html">Aesthetics</a></li>
+            <li><a href="CBD.html">CBD</a></li>
+            <li><a href="team.html">Meet The Team</a></li>
+            <li><a href="#footer" class="scrolly">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main -->
+    <article id="main">
+        <header>
+            <h2 class="major special">Meet The Team</h2>
+            <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
+            <h3><a href="tel:4017678766"
+                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
+                        class="label">(401) 767-8766</span></a></h3>
         </header>
 
-        <!-- Menu -->
-        <nav id="menu">
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="adult.html">Adult Primary Care</a></li>
-                <li><a href="addiction.html">Addiction Recovery</a></li>
-                <li><a href="aesthetic.html">Aesthetics</a></li>
-                <li><a href="CBD.html">CBD</a></li>
-                <li><a href="team.html">Meet The Team</a></li>
-                <li><a href="#footer" class="scrolly">Contact Us</a></li>
-            </ul>
-        </nav>
-
-        <!-- Main -->
-        <article id="main">
-            <header>
-                <h2 class="major special">Meet The Team</h2>
-                <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
-                <h3><a
-                    href="tel:4017678766"
-                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                    ><span class="label">(401) 767-8766</span></a
-                ></h3>
-            </header>
-
-            <!-- Bios -->
-            <section id="two" class="wrapper alt">
-                <section class="spotlight">
-                    <div class="image"><img src="images/pic01.jpg" alt="" /></div>
-                    <div class="content">
-                        <h3 class="major">Dr. Linda Young, DNP</h3>
-                        <p>
-                            My care philosophy has been developed and refined over my years of practice. I believe caring for patients is a privilege, not a right given to me because of my degrees and education. I believe that everyone belongs to someone and I take the time to care for my patients as I would someone that belongs to me. I take the time to listen to my patients so I can understand and recognize their health needs and address the issues that they may be struggling with. I believe in building a long-term patient-provider relationship based on trust, skill, and timely advice.
-                        </p>
-                    </div>
-                </section>
-                <section class="spotlight">
-                    <div class="image"><img src="images/yeilin.jpg" alt="" /></div>
-                    <div class="content">
-                        <h3 class="major">Yeilin Medical Assistant</h3>
-                        <p>
-                            Yeilin is a Certified Medical Assistant. She has been in the medical field over 4 years. She is experienced in acute and continuous care facilities. She is fluent in Spanish and English. Yeilin strives to provide the highest quality patient care.
-                        </p>
-                    </div>
-                </section>
-                <section class="spotlight">
-                    <div class="image"><img src="images/verina.jpg" alt="" /></div>
-                    <div class="content">
-                        <h3 class="major">Verina Medical Assistant</h3>
-                        <p>
-                            Verina is a certified medical assistant for over 5 years. She has worked with pediatrics, orthopedic, also at Miriam hospital immunology and internal medicine, and urgent care. Verina has found her passion in the medical field, all she wants to do is help people and that is why she is a dedicated team member at Compassionate Care INC.
-                        </p>
-                    </div>
-                </section>
+        <!-- Bios -->
+        <section id="two" class="wrapper alt">
+            <section class="spotlight">
+                <div class="image"><img src="images/pic01.jpg" alt="" /></div>
+                <div class="content">
+                    <h3 class="major">Dr. Linda Young, DNP</h3>
+                    <p>
+                        My care philosophy has been developed and refined over my years of practice. I believe caring
+                        for patients is a privilege, not a right given to me because of my degrees and education. I
+                        believe that everyone belongs to someone and I take the time to care for my patients as I would
+                        someone that belongs to me. I take the time to listen to my patients so I can understand and
+                        recognize their health needs and address the issues that they may be struggling with. I believe
+                        in building a long-term patient-provider relationship based on trust, skill, and timely advice.
+                    </p>
+                </div>
             </section>
-        </article>
+            <section class="spotlight">
+                <div class="image"><img src="images/yeilin.jpg" alt="" /></div>
+                <div class="content">
+                    <h3 class="major">Yeilin Medical Assistant</h3>
+                    <p>
+                        Yeilin is a Certified Medical Assistant. She has been in the medical field over 4 years. She is
+                        experienced in acute and continuous care facilities. She is fluent in Spanish and English.
+                        Yeilin strives to provide the highest quality patient care.
+                    </p>
+                </div>
+            </section>
+            <section class="spotlight">
+                <div class="image"><img src="images/verina.jpg" alt="" /></div>
+                <div class="content">
+                    <h3 class="major">Verina Medical Assistant</h3>
+                    <p>
+                        Verina is a certified medical assistant for over 5 years. She has worked with pediatrics,
+                        orthopedic, also at Miriam hospital immunology and internal medicine, and urgent care. Verina
+                        has found her passion in the medical field, all she wants to do is help people and that is why
+                        she is a dedicated team member at Compassionate Care INC.
+                    </p>
+                </div>
+            </section>
+        </section>
+    </article>
 
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="inner">
-                <section class="about">
-                    <h4 class="major">Hours</h4>
-                    <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp; Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday - Sunday</br>
-						Extended hours are available by appointment only.</p>
-                    <ul class="actions">
-                        <li><a href="#main" class="button scrolly">Learn more</a></li>
-                    </ul>
-                </section>
-                <section class="contact-info">
-                    <h4 class="major">Get in Touch</h4>
-                    <ul class="contact">
-                        <li class="icon solid fa-phone">
-                            <a
-                                href="tel:4017678766"
-                                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                                ><span class="label">(401) 767-8766</span></a
-                            >
-                        </li>
-                        <li class="icon solid fa-envelope">
-                            <a href="#">askWhich@email.to.use</a>
-                        </li>
-                        <li class="icon brands fa-instagram">
-                            <a href="https://www.instagram.com/dryoungdnp/"
-                                >@dryoungdnp</a
-                            >
-                        </li>
-                        <li class="icon brands fa-facebook-f">
-                            <a href="https://www.facebook.com/DrYoungDNP"
-                                >facebook.com/DrYoungDNP</a
-                            >
-                        </li>
-                    </ul>
-                    <ul class="contact">
-                        <li class="icon solid fa-home">
-                            <a href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749"
-                                >Dr. Linda Young, DNP<br />117 Eddie Dowling
-                                Hwy<br />North Smithfield, RI 02896</a
-                            >
-                        </li>
-                    </ul>
-                </section>
-            </div>
-            <div class="copyright">
-                <p>
-                    &copy;
-                    <a href="https://www.webundefined.com"
-                        >Web Undefined, LLC</a
-                    >
-                    All rights reserved.
-                </p>
-            </div>
-        </footer>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <section class="about">
+                <h4 class="major">Hours</h4>
+                <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp;
+                    Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
+                    Sunday</br>
+                    Extended hours are available by appointment only.</p>
+                <ul class="actions">
+                    <li><a href="#main" class="button scrolly">Learn more</a></li>
+                </ul>
+            </section>
+            <section class="contact-info">
+                <h4 class="major">Get in Touch</h4>
+                <ul class="contact">
+                    <li class="icon solid fa-phone">
+                        <a href="tel:4017678766"
+                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
+                                class="label">(401) 767-8766</span></a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="#">askWhich@email.to.use</a>
+                    </li>
+                    <li class="icon brands fa-instagram">
+                        <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
+                    </li>
+                    <li class="icon brands fa-facebook-f">
+                        <a href="https://www.facebook.com/DrYoungDNP">facebook.com/DrYoungDNP</a>
+                    </li>
+                </ul>
+                <ul class="contact">
+                    <li class="icon solid fa-home">
+                        <a
+                            href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749">Dr.
+                            Linda Young, DNP<br />117 Eddie Dowling
+                            Hwy<br />North Smithfield, RI 02896</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="copyright">
+            <p>
+                &copy;
+                <a href="https://www.webundefined.com">Web Undefined, LLC</a>
+                All rights reserved.
+            </p>
+        </div>
+    </footer>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
