--- a/adult.html
+++ b/adult.html
@@ -1,164 +1,163 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, user-scalable=1"
-        />
-        <link rel="stylesheet" href="assets/css/main.css" />
-        <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
-    </head>
-    <body class="is-preload">
-        <!-- Floating Reviews Badge -->
-        <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
 
-        <!-- Header -->
-        <header id="header">
-            <h1>
-                <a href="index.html">Dr. Linda S. Young, DNP</a>
-            </h1>
-            <a href="#menu">Menu</a>
+<head>
+    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
+</head>
+
+<body class="is-preload">
+    <!-- Floating Reviews Badge -->
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
+
+    <!-- Header -->
+    <header id="header">
+        <h1>
+            <a href="index.html">Dr. Linda S. Young, DNP</a>
+        </h1>
+        <a href="#menu">Menu</a>
+    </header>
+
+    <!-- Menu -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="adult.html">Adult Primary Care</a></li>
+            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <li><a href="aesthetic.html">Aesthetics</a></li>
+            <li><a href="CBD.html">CBD</a></li>
+            <li><a href="team.html">Meet The Team</a></li>
+            <li><a href="#footer" class="scrolly">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main -->
+    <article id="main">
+        <header>
+            <h2 class="major special">Adult Primary Care</h2>
+            <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
+            <h3><a href="tel:4017678766"
+                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
+                        class="label">(401) 767-8766</span></a></h3>
         </header>
-
-        <!-- Menu -->
-        <nav id="menu">
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="adult.html">Adult Primary Care</a></li>
-                <li><a href="addiction.html">Addiction Recovery</a></li>
-                <li><a href="aesthetic.html">Aesthetics</a></li>
-                <li><a href="CBD.html">CBD</a></li>
-                <li><a href="team.html">Meet The Team</a></li>
-                <li><a href="#footer" class="scrolly">Contact Us</a></li>
-            </ul>
-        </nav>
-
-        <!-- Main -->
-        <article id="main">
-            <header>
-                <h2 class="major special">Adult Primary Care</h2>
-                <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
-                <h3><a
-                                href="tel:4017678766"
-                                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                                ><span class="label">(401) 767-8766</span></a
-                            ></h3>
-            </header>
-            <section class="wrapper">
-                <div class="inner">
-                    <h3 style="text-align: center;">Comprehensive Primary Care for Adults</h3>
-                    <span class="image left"
-                        ><img src="images/newPatient.png" alt=""
-                    />
+        <section class="wrapper">
+            <div class="inner">
+                <h3 style="text-align: center;">Comprehensive Primary Care for Adults</h3>
+                <span class="image left"><img src="images/newPatient.png" alt="" />
                     <ul class="actions special stacked" style="padding-top: 25px; text-align: center;">
                         <li>
-                            <a href="#" class="button primary large scrolly pdfButtons"
-                                >New Patient Registration</a
-                            >
+                            <a href="#" class="button primary large scrolly pdfButtons">New Patient Registration</a>
                         </li>
                         <li>
-                            <a href="#" class="button large scrolly pdfButton"
-                                >Welcome Letter</a
-                            >
+                            <a href="#" class="button large scrolly pdfButton">Welcome Letter</a>
                         </li>
                         <li>
-                            <a href="#" class="button primary large scrolly pdfButtons"
-                                >PCMH FAQ</a
-                            >
-                        </li>
-                    </ul></span>
-                    <p>
-                        Dr. Young, DNP treats adult patients of all ages with compassion, kindness and respect. The office has been serving the North Smithfield, RI since 2019 and Dr. Young, DNP has been treating adult and geriatric patients for over 17 years. Call or visit our facility to learn more about our adult and geriatric primary care.
-                    </p>
-                    <p>
-                        
-                    </p>
-                    <hr />
-                    <h4>We Take Care of Your Medical Concerns</h4>
-                    <p>
-                        <b>-</b> Annual exams  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Hepatitis A and B vaccines</br>
-                        <b>-</b> GYN exams &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Pneumonia vaccines</br>
-                        <b>-</b> DOT exams &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Nebulizer treatment</br>
-                        <b>-</b> Sick visits &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Worker's compensation evaluations</br>
-                        <b>-</b> UTI testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Trigger point injections</br>
-                        <b>-</b> Pregnancy testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Skin tag removal </br>
-                        <b>-</b> Cholesterol testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> PFT's </br>
-                        <b>-</b> A1C testing </br>
-                        <b>-</b> Flu testing </br>
-                        <b>-</b> Strep throat</br>
-                        <b>-</b> Flu vaccines</br>
-                        <b>-</b> TDAP vaccines
-                    </p>
-                </div>
-            </section>
-        </article>
-
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="inner">
-                <section class="about">
-                    <h4 class="major">Hours</h4>
-                    <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp; Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday - Sunday</br>
-						Extended hours are available by appointment only.</p>
-                    <ul class="actions">
-                        <li><a href="#main" class="button scrolly">Learn more</a></li>
-                    </ul>
-                </section>
-                <section class="contact-info">
-                    <h4 class="major">Get in Touch</h4>
-                    <ul class="contact">
-                        <li class="icon solid fa-phone">
-                            <a
-                                href="tel:4017678766"
-                                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                                ><span class="label">(401) 767-8766</span></a
-                            >
-                        </li>
-                        <li class="icon solid fa-envelope">
-                            <a href="#">askWhich@email.to.use</a>
-                        </li>
-                        <li class="icon brands fa-instagram">
-                            <a href="https://www.instagram.com/dryoungdnp/"
-                                >@dryoungdnp</a
-                            >
-                        </li>
-                        <li class="icon brands fa-facebook-f">
-                            <a href="https://www.facebook.com/DrYoungDNP"
-                                >facebook.com/DrYoungDNP</a
-                            >
+                            <a href="#" class="button primary large scrolly pdfButtons">PCMH FAQ</a>
                         </li>
                     </ul>
-                    <ul class="contact">
-                        <li class="icon solid fa-home">
-                            <a href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749"
-                                >Dr. Linda Young, DNP<br />117 Eddie Dowling
-                                Hwy<br />North Smithfield, RI 02896</a
-                            >
-                        </li>
-                    </ul>
-                </section>
-            </div>
-            <div class="copyright">
+                </span>
                 <p>
-                    &copy;
-                    <a href="https://www.webundefined.com"
-                        >Web Undefined, LLC</a
-                    >
-                    All rights reserved.
+                    Dr. Young, DNP treats adult patients of all ages with compassion, kindness and respect. The office
+                    has been serving the North Smithfield, RI since 2019 and Dr. Young, DNP has been treating adult and
+                    geriatric patients for over 17 years. Call or visit our facility to learn more about our adult and
+                    geriatric primary care.
+                </p>
+                <p>
+
+                </p>
+                <hr />
+                <h4>We Take Care of Your Medical Concerns</h4>
+                <p>
+                    <b>-</b> Annual exams
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b>
+                    Hepatitis A and B vaccines</br>
+                    <b>-</b> GYN exams
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>-</b> Pneumonia vaccines</br>
+                    <b>-</b> DOT exams
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>-</b> Nebulizer treatment</br>
+                    <b>-</b> Sick visits
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>-</b> Worker's compensation evaluations</br>
+                    <b>-</b> UTI testing
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <b>-</b> Trigger point injections</br>
+                    <b>-</b> Pregnancy testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> Skin tag removal
+                    </br>
+                    <b>-</b> Cholesterol testing &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>-</b> PFT's </br>
+                    <b>-</b> A1C testing </br>
+                    <b>-</b> Flu testing </br>
+                    <b>-</b> Strep throat</br>
+                    <b>-</b> Flu vaccines</br>
+                    <b>-</b> TDAP vaccines
                 </p>
             </div>
-        </footer>
+        </section>
+    </article>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <section class="about">
+                <h4 class="major">Hours</h4>
+                <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp;
+                    Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
+                    Sunday</br>
+                    Extended hours are available by appointment only.</p>
+                <ul class="actions">
+                    <li><a href="#main" class="button scrolly">Learn more</a></li>
+                </ul>
+            </section>
+            <section class="contact-info">
+                <h4 class="major">Get in Touch</h4>
+                <ul class="contact">
+                    <li class="icon solid fa-phone">
+                        <a href="tel:4017678766"
+                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
+                                class="label">(401) 767-8766</span></a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="#">askWhich@email.to.use</a>
+                    </li>
+                    <li class="icon brands fa-instagram">
+                        <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
+                    </li>
+                    <li class="icon brands fa-facebook-f">
+                        <a href="https://www.facebook.com/DrYoungDNP">facebook.com/DrYoungDNP</a>
+                    </li>
+                </ul>
+                <ul class="contact">
+                    <li class="icon solid fa-home">
+                        <a
+                            href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749">Dr.
+                            Linda Young, DNP<br />117 Eddie Dowling
+                            Hwy<br />North Smithfield, RI 02896</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="copyright">
+            <p>
+                &copy;
+                <a href="https://www.webundefined.com">Web Undefined, LLC</a>
+                All rights reserved.
+            </p>
+        </div>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
