--- a/index.html
+++ b/index.html
@@ -1,126 +1,121 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, user-scalable=1"
-        />
-        <link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
-    </head>
-    <body class="is-preload">
-		<!-- Floating Reviews Badge -->
-		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-		<div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
 
-        <!-- Header -->
-        <header id="header">
-            <h1>
-                <a href="index.html">Dr. Linda S. Young, DNP</a>
-            </h1>
-            <a href="#menu">Menu</a>
-        </header>
+<head>
+    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
+</head>
 
-        <!-- Menu -->
-        <nav id="menu">
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="adult.html">Adult Primary Care</a></li>
-                <li><a href="addiction.html">Addiction Recovery</a></li>
-                <li><a href="aesthetic.html">Aesthetics</a></li>
-                <li><a href="CBD.html">CBD</a></li>
-                <li><a href="team.html">Meet The Team</a></li>
-                <li><a href="#footer" class="scrolly">Contact Us</a></li>
-            </ul>
-        </nav>
+<body class="is-preload">
+    <!-- Floating Reviews Badge -->
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
 
-        <!-- Banner -->
-        <section id="banner">
-            <div class="inner">
-                <h2 class="major special">Primary Care Practice</h2>
-                <p>
-                    Now Accepting New Patients | Over 19 Years of Experience |
-                    Licensed and Certified
-                </p>
-                <ul class="actions special stacked">
-                    <li>
-                        <a href="#one" class="button primary large scrolly"
-                            >New Patient Resources</a
-                        >
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/DrYoungDNP" class="button large scrolly"
-                            >Office Updates</a
-                        >
-                    </li>
-                </ul>
-            </div>
-        </section>
+    <!-- Header -->
+    <header id="header">
+        <h1>
+            <a href="index.html">Dr. Linda S. Young, DNP</a>
+        </h1>
+        <a href="#menu">Menu</a>
+    </header>
 
-        <!-- One -->
-        <section id="one" class="wrapper alt style2">
-            <ul class="features">
+    <!-- Menu -->
+    <nav id="menu">
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="adult.html">Adult Primary Care</a></li>
+            <li><a href="addiction.html">Addiction Recovery</a></li>
+            <li><a href="aesthetic.html">Aesthetics</a></li>
+            <li><a href="CBD.html">CBD</a></li>
+            <li><a href="team.html">Meet The Team</a></li>
+            <li><a href="#footer" class="scrolly">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Banner -->
+    <section id="banner">
+        <div class="inner">
+            <h2 class="major special">Primary Care Practice</h2>
+            <p>
+                Now Accepting New Patients | Over 19 Years of Experience |
+                Licensed and Certified
+            </p>
+            <ul class="actions special stacked">
                 <li>
-                    <div class="content">
-                        <span class="icon solid major fa-heartbeat"></span>
-                        <h3 class="major">Adult Primary Care</h3>
-                        <p>
-                            After a certain age, your body needs special care.
-                            Turn to Dr. Linda Young, DNP for adult and geriatric
-                            primary care.
-                        </p>
-                        <ul class="actions">
-                            <li><a href="adult.html" class="button">Learn More</a></li>
-                        </ul>
-                    </div>
+                    <a href="#one" class="button primary large scrolly">New Patient Resources</a>
                 </li>
                 <li>
-                    <div class="content">
-                        <span class="icon solid major fa-user-md"></span>
-                        <h3 class="major">Botox</h3>
-                        <p>
-                            Revitalize your appearance safely and effectively
-                            with our Xeomin and Botox injections.
-                        </p>
-                        <ul class="actions">
-                            <li><a href="aesthetic.html" class="button">Learn More</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <span class="icon solid major fa-medkit"></span>
-                        <h3 class="major">Hair Restoration</h3>
-                        <p>
-                            Are you looking for a safe and nonsurgical way to
-                            get your lost hair back? Resort to our hair
-                            restoration treatment today!
-                        </p>
-                        <ul class="actions">
-                            <li><a href="aesthetic.html" class="button">Learn More</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="content">
-                        <span class="icon solid major fa-stethoscope"></span>
-                        <h3 class="major">Addiction Recovery</h3>
-                        <p>
-                            Turn to our opioid treatment center and don't let
-                            drug addiction ruin your life. Reach out to us for a
-                            free consultation!
-                        </p>
-                        <ul class="actions">
-                            <li><a href="addiction.html" class="button">Learn More</a></li>
-                        </ul>
-                    </div>
+                    <a href="https://www.facebook.com/DrYoungDNP" class="button large scrolly">Office Updates</a>
                 </li>
             </ul>
-        </section>
+        </div>
+    </section>
 
-        <!-- Two 
+    <!-- One -->
+    <section id="one" class="wrapper alt style2">
+        <ul class="features">
+            <li>
+                <div class="content">
+                    <span class="icon solid major fa-heartbeat"></span>
+                    <h3 class="major">Adult Primary Care</h3>
+                    <p>
+                        After a certain age, your body needs special care.
+                        Turn to Dr. Linda Young, DNP for adult and geriatric
+                        primary care.
+                    </p>
+                    <ul class="actions">
+                        <li><a href="adult.html" class="button">Learn More</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <span class="icon solid major fa-user-md"></span>
+                    <h3 class="major">Botox</h3>
+                    <p>
+                        Revitalize your appearance safely and effectively
+                        with our Xeomin and Botox injections.
+                    </p>
+                    <ul class="actions">
+                        <li><a href="aesthetic.html" class="button">Learn More</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <span class="icon solid major fa-medkit"></span>
+                    <h3 class="major">Hair Restoration</h3>
+                    <p>
+                        Are you looking for a safe and nonsurgical way to
+                        get your lost hair back? Resort to our hair
+                        restoration treatment today!
+                    </p>
+                    <ul class="actions">
+                        <li><a href="aesthetic.html" class="button">Learn More</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <span class="icon solid major fa-stethoscope"></span>
+                    <h3 class="major">Addiction Recovery</h3>
+                    <p>
+                        Turn to our opioid treatment center and don't let
+                        drug addiction ruin your life. Reach out to us for a
+                        free consultation!
+                    </p>
+                    <ul class="actions">
+                        <li><a href="addiction.html" class="button">Learn More</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Two 
         <section id="two" class="wrapper alt">
             <section class="spotlight">
                 <div class="image"><img src="images/pic01.jpg" alt="" /></div>
@@ -163,78 +158,73 @@
             </section>
         </section> -->
 
-        <!-- Three -->
-        <section id="three" class="wrapper style1 special">
-            <div class="inner narrow">
-                <h3 class="major special">Reviews</h3>
-				<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-				<div class="elfsight-app-1bc931fd-f020-44cd-8673-90a9d5540179"></div>
-            </div>
-        </section>
+    <!-- Three -->
+    <section id="three" class="wrapper style1 special">
+        <div class="inner narrow">
+            <h3 class="major special">Reviews</h3>
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-1bc931fd-f020-44cd-8673-90a9d5540179"></div>
+        </div>
+    </section>
 
-        <!-- Footer -->
-        <footer id="footer">
-            <div class="inner">
-                <section class="about">
-                    <h4 class="major">Hours</h4>
-                    <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp; Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday - Sunday</br>
-						Extended hours are available by appointment only.</p>
-                    <ul class="actions">
-                        <li><a href="#banner" class="button scrolly">Learn more</a></li>
-                    </ul>
-                </section>
-                <section class="contact-info">
-                    <h4 class="major">Get in Touch</h4>
-                    <ul class="contact">
-                        <li class="icon solid fa-phone">
-                            <a
-                                href="tel:4017678766"
-                                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-                                ><span class="label">(401) 767-8766</span></a
-                            >
-                        </li>
-                        <li class="icon solid fa-envelope">
-                            <a href="#">askWhich@email.to.use</a>
-                        </li>
-                        <li class="icon brands fa-instagram">
-                            <a href="https://www.instagram.com/dryoungdnp/"
-                                >@dryoungdnp</a
-                            >
-                        </li>
-                        <li class="icon brands fa-facebook-f">
-                            <a href="https://www.facebook.com/DrYoungDNP"
-                                >facebook.com/DrYoungDNP</a
-                            >
-                        </li>
-                    </ul>
-                    <ul class="contact">
-                        <li class="icon solid fa-home">
-                            <a href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749"
-                                >Dr. Linda Young, DNP<br />117 Eddie Dowling
-                                Hwy<br />North Smithfield, RI 02896</a
-                            >
-                        </li>
-                    </ul>
-                </section>
-            </div>
-            <div class="copyright">
-                <p>
-                    &copy;
-                    <a href="https://www.webundefined.com"
-                        >Web Undefined, LLC</a
-                    >
-                    All rights reserved.
-                </p>
-            </div>
-        </footer>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <section class="about">
+                <h4 class="major">Hours</h4>
+                <p>9:00 am - 5:00 pm &nbsp;&nbsp;&nbsp; Monday - Thursday</br>9:00 am - 2:00 pm &nbsp;&nbsp;&nbsp;
+                    Friday</br>Closed &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Saturday -
+                    Sunday</br>
+                    Extended hours are available by appointment only.</p>
+                <ul class="actions">
+                    <li><a href="#banner" class="button scrolly">Learn more</a></li>
+                </ul>
+            </section>
+            <section class="contact-info">
+                <h4 class="major">Get in Touch</h4>
+                <ul class="contact">
+                    <li class="icon solid fa-phone">
+                        <a href="tel:4017678766"
+                            onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
+                                class="label">(401) 767-8766</span></a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="#">askWhich@email.to.use</a>
+                    </li>
+                    <li class="icon brands fa-instagram">
+                        <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
+                    </li>
+                    <li class="icon brands fa-facebook-f">
+                        <a href="https://www.facebook.com/DrYoungDNP">facebook.com/DrYoungDNP</a>
+                    </li>
+                </ul>
+                <ul class="contact">
+                    <li class="icon solid fa-home">
+                        <a
+                            href="https://www.google.com/maps/dir//117+Eddie+Dowling+Hwy,+North+Smithfield,+RI+02896/@41.9801536,-71.5839209,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e46a7ab1adf54f:0xe333249c6a51ff1e!2m2!1d-71.513881!2d41.9801749">Dr.
+                            Linda Young, DNP<br />117 Eddie Dowling
+                            Hwy<br />North Smithfield, RI 02896</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <div class="copyright">
+            <p>
+                &copy;
+                <a href="https://www.webundefined.com">Web Undefined, LLC</a>
+                All rights reserved.
+            </p>
+        </div>
+    </footer>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-    </body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+</body>
+
 </html>
