--- a/team.html
+++ b/team.html
@@ -40,15 +40,15 @@
         <header>
             <h2 class="major special">Meet The Team</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
-            <h3><a href="tel:4017678766"
-                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
-                        class="label">(401) 767-8766</span></a></h3>
+            <a href="tel:4017678766"
+                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+                class="button primary large aestheticButtons">Call Now</a>
         </header>
 
         <!-- Bios -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
-                <div class="image"><img src="images/pic01.jpg" alt="" /></div>
+                <div class="image"><img src="images/Linda.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">Dr. Linda Young, DNP</h3>
                     <p>
