--- a/aesthetic.html
+++ b/aesthetic.html
@@ -40,9 +40,9 @@
         <header>
             <h2 class="major special">Aesthetics</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
-            <h3><a href="tel:4017678766"
-                    onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><span
-                        class="label">(401) 767-8766</span></a></h3>
+            <a href="tel:4017678766"
+                onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+                class="button primary large aestheticButtons">Call Now</a>
         </header>
 
         <!-- Services -->
