--- a/CBD.html
+++ b/CBD.html
@@ -37,7 +37,8 @@
 
     <!-- Main -->
     <article id="main">
-        <header>
+        <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url('images/waitingRoom2.jpg');">
             <h2 class="major special">Quality With Purpose</h2>
             <p>Green Compass: Commited to bringing quality CBD products from our farms to your door!</p>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
