--- a/addiction.html
+++ b/addiction.html
@@ -12,6 +12,7 @@
 <body class="is-preload">
     <!-- Floating Reviews Badge -->
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
     <div class="elfsight-app-e5fb7682-8295-4ab5-a7a6-21fd6ca24cf5"></div>
 
     <!-- Header -->
@@ -37,7 +38,8 @@
 
     <!-- Main -->
     <article id="main">
-        <header>
+        <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url('images/hands.png');">
             <h2 class="major special">Drug Addiction Recovery Treatment</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
