--- a/team.html
+++ b/team.html
@@ -37,7 +37,8 @@
 
     <!-- Main -->
     <article id="main">
-        <header>
+        <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url('images/waitingRoom1.jpg');">
             <h2 class="major special">Meet The Team</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
