more content and stuff

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -38,7 +38,7 @@
     <!-- Main -->
     <article id="main">
         <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url('images/examRoom2.jpg');">
+        url('images/waitingRoom2.jpg');">
             <h2 class="major special">Aesthetics</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
@@ -49,22 +49,18 @@
         <!-- Services -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
-                <div class="image"><img src="images/pic01.jpg" alt="" /></div>
+                <div class="image"><img src="images/botoxHeader.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">Botox and Xeomin</h3>
                     <p>
                         If you're looking for Botox or Xeomin, rely on Dr. Linda Young, DNP for your cosmetic cure.
                         Revitalize your appearance safely and effectively with our Xeomin and Botox injections.
-                        </br>
-                        Our office has the latest products to give you the most natural-looking results. We conduct
-                        treatments that address the root cause of your aging, imparting that youthful appearance you so
-                        desire! You can expect individualized attention from us so that every patient gets the treatment
-                        that is right for them. Reach out to us today!
                     </p>
+                    <a href="botox.html" class="button primary large aestheticButtons">Find Out More</a>
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+                <div class="image"><img src="images/hairHeader.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">Hair Restoration Treatment</h3>
                     <p>
@@ -76,7 +72,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img src="images/pic03.jpg" alt="" /></div>
+                <div class="image"><img src="images/vi.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">VI Peel Treatment</h3>
                     <p>
