--- a/botox.html
+++ b/botox.html
@@ -38,8 +38,8 @@
     <!-- Main -->
     <article id="main">
         <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url('images/hairHeader.jpg');">
-            <h2 class="major special">Hair Restoration Treatment</h2>
+        url('images/botoxHeader.jpg');">
+            <h2 class="major special">Botox and Xeomin</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
                 onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
@@ -47,47 +47,19 @@
         </header>
         <section class="wrapper">
             <div class="inner">
-                <h3 style="text-align: center;">Platelet Rich Plasma Hair Treatment</h3>
-                <span class="image left"><img src="images/hairTreatment.png" alt="" /></span>
+                <h3 style="text-align: center;">Botox and Xeomin</h3>
+                <span class="image left"><img src="images/botox.png" alt="" /></span>
                 <p>
-                    Treat hair loss with Dr. Linda Young's nonsurgical hair restoration treatment. Give your hair growth
-                    a boost with the help of our advanced procedures. Turn to us for quality hair restoration treatments
-                    in the North Smithfield, RI area.
+                    If you're looking for Botox or Xeomin, rely on Dr. Linda Young, DNP for your cosmetic cure.
+                    Revitalize your appearance safely and effectively with our Xeomin and Botox injections.
                 </p>
-
-                <h4>Selphyl® Platelet-Rich Fibrin Matrix (PRFM)</h4>
                 <p>
-                    The Selphyl® System is designed for the safe and rapid preparation of Platelet-rich Fibrin Matrix
-                    (PRFM) from a small sample of blood at the patient point of care. Many PRP systems require operator
-                    skill, have varying results and have extensive contamination with red blood cells and white blood
-                    cells.
-                    </br>
-                    Selphyl® removes virtually all contaminating cells and is independent of operator technique. PRP is
-                    converted to PRFM through a controlled process, creating a scaffold that serves to protect and
-                    preserve platelets. Think of Selphyl® PRFM as the next generation PRP.
+                    Our office has the latest products to give you the most natural-looking results. We conduct
+                    treatments that address the root cause of your aging, imparting that youthful appearance you so
+                    desire! You can expect individualized attention from us so that every patient gets the treatment
+                    that is right for them. Reach out to us today!
                 </p>
-
-                <h4>Our Hair Restoration Treatment Includes</h4>
-                <p>
-                    <b>-</b> Platelet rich plasma (PRP) </br>
-                    <b>-</b> Nonsurgical treatment
-                </p>
-
-                <h4>About Selphyl® PRFM</h4>
-                <p>
-                    Selphyl® PRFM is utilized by physicians in their practices for various applications. The process is
-                    simple and the entire procedure takes approximately 30 minutes. While it may be possible to achieve
-                    your desired results after just one treatment, additional treatments are generally recommended. Your
-                    doctor will determine the best approach for you individually.
-                </p>
-
-                <h4>The Power of Platelets</h4>
-                <p>
-                    Platelets and other components in human blood migrate to a site of injury. Platelets are known to
-                    release a variety of growth factors that respond to tissue injury, where they initiate and promote
-                    healing. By concentrating platelets at the site of injury, physicians have the potential to enhance
-                    the body’s natural capacity for healing.
-                </p>
+                <img class="botoxBA" src="images/botoxBeforeAfter.png" alt="" />
             </div>
         </section>
     </article>
