--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
         <!-- Bios -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
-                <div class="image"><img src="images/Linda.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" src="images/Linda.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">Dr. Linda Young, DNP</h3>
                     <p>
@@ -63,7 +63,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img src="images/yeilin.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">Yeilin Medical Assistant</h3>
                     <p>
@@ -74,7 +74,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img src="images/verina.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" src="images/verina.jpg" alt="" /></div>
                 <div class="content">
                     <h3 class="major">Verina Medical Assistant</h3>
                     <p>
