--- a/CBD.html
+++ b/CBD.html
@@ -136,7 +136,12 @@
                     Sublingual consumption, under the tongue, will yield some of the best bioavailability, outside of
                     directly injecting CBD into your veins. It is also easier to measure your dose than vaping.
                     Absorption may also vary per individual.</p>
-
+                <h4 style="text-align: center;">Shop With Us At <a
+                        href="https://compassionatecare.greencompassglobal.com/">Green Compass Global</a>
+                </h4>
+                <a href="https://compassionatecare.greencompassglobal.com/"
+                    class="button primary large aestheticButtons cbButton">Buy
+                    Now</a>
             </div>
         </section>
     </article>
