--- a/aesthetic.html
+++ b/aesthetic.html
@@ -51,10 +51,10 @@
             <section class="spotlight">
                 <div class="image"><img src="images/botoxHeader.jpg" alt="" /></div>
                 <div class="content">
-                    <h3 class="major">Botox and Xeomin</h3>
+                    <h3 class="major">Botox and Juvederm</h3>
                     <p>
-                        If you're looking for Botox or Xeomin, rely on Dr. Linda Young, DNP for your cosmetic cure.
-                        Revitalize your appearance safely and effectively with our Xeomin and Botox injections.
+                        If you're looking for Botox or Juvederm, rely on Dr. Linda Young, DNP for your cosmetic cure.
+                        Revitalize your appearance safely and effectively with our Juvederm and Botox injections.
                     </p>
                     <a href="botox.html" class="button primary large aestheticButtons">Find Out More</a>
                 </div>
