--- a/botox.html
+++ b/botox.html
@@ -39,7 +39,7 @@
     <article id="main">
         <header style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
         url('images/botoxHeader.jpg');">
-            <h2 class="major special">Botox and Xeomin</h2>
+            <h2 class="major special">Botox and Juvederm</h2>
             <p>Now Accepting New Patients | Over 19 Years of Experience | Licensed and Certified</p>
             <a href="tel:4017678766"
                 onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
@@ -47,11 +47,11 @@
         </header>
         <section class="wrapper">
             <div class="inner">
-                <h3 style="text-align: center;">Botox and Xeomin</h3>
+                <h3 style="text-align: center;">Botox and Juvederm</h3>
                 <span class="image left"><img src="images/botox.png" alt="" /></span>
                 <p>
-                    If you're looking for Botox or Xeomin, rely on Dr. Linda Young, DNP for your cosmetic cure.
-                    Revitalize your appearance safely and effectively with our Xeomin and Botox injections.
+                    If you're looking for Botox or Juvederm, rely on Dr. Linda Young, DNP for your cosmetic cure.
+                    Revitalize your appearance safely and effectively with our Juvederm and Botox injections.
                 </p>
                 <p>
                     Our office has the latest products to give you the most natural-looking results. We conduct
