more demo changes and content

--- a/CBD.html
+++ b/CBD.html
@@ -142,7 +142,7 @@
                 <a href="https://compassionatecare.greencompassglobal.com/"
                     class="button primary large aestheticButtons cbButton">Buy
                     Now</a>
-                <img style="" class="QR" src="images/frame.png" alt="" />
+                <img class="QR" src="images/frame.png" alt="" />
             </div>
         </section>
     </article>
@@ -170,7 +170,8 @@
                                 class="label">(401) 767-8766</span></a>
                     </li>
                     <li class="icon solid fa-envelope">
-                        <a href="#">askWhich@email.to.use</a>
+                        <a
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
