--- a/adult.html
+++ b/adult.html
@@ -50,7 +50,8 @@
                 <span class="image left"><img src="images/newPatient.png" alt="" />
                     <ul class="actions special stacked" style="padding-top: 25px; text-align: center;">
                         <li>
-                            <a href="#" class="button primary large scrolly pdfButtons">New Patient Registration</a>
+                            <a href="./assets/NEW PATIENT PACKAGE.pdf"
+                                class="button primary large scrolly pdfButtons">New Patient Registration</a>
                         </li>
                         <li>
                             <a href="./assets/WELCOME COVER LETTER.pdf" class="button large scrolly pdfButton">Welcome
@@ -124,7 +125,8 @@
                                 class="label">(401) 767-8766</span></a>
                     </li>
                     <li class="icon solid fa-envelope">
-                        <a href="#">askWhich@email.to.use</a>
+                        <a
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
