--- a/vi.html
+++ b/vi.html
@@ -87,7 +87,8 @@
                                 class="label">(401) 767-8766</span></a>
                     </li>
                     <li class="icon solid fa-envelope">
-                        <a href="#">askWhich@email.to.use</a>
+                        <a
+                            href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
