--- a/adult.html
+++ b/adult.html
@@ -58,7 +58,7 @@
                                 Letter</a>
                         </li>
                         <li>
-                            <a href="#" class="button primary large scrolly pdfButtons">PCMH FAQ</a>
+                            <a href="./assets/PCMH FAQ.pdf" class="button primary large scrolly pdfButtons">PCMH FAQ</a>
                         </li>
                     </ul>
                 </span>
