--- a/CBD.html
+++ b/CBD.html
@@ -142,7 +142,7 @@
                 <a href="https://compassionatecare.greencompassglobal.com/"
                     class="button primary large aestheticButtons cbButton">Buy
                     Now</a>
-                <img class="QR" src="images/frame.png" alt="" />
+                <img class="QR" src="images/qrcode.png" alt="" />
             </div>
         </section>
     </article>
