--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li>
                 <div class="content">
                     <span class="icon solid major fa-user-md"></span>
-                    <h3 class="major">Botox</h3>
+                    <h3 class="major">Botox and Juvederm</h3>
                     <p>
                         Revitalize your appearance safely and effectively
                         with our Xeomin and Botox injections.
